rust_test_framework/tests/ui/duplicate_struct.stderr
error: Duplicate test case value found
  --> tests/ui/duplicate_struct.rs:10:15
   |
10 | #[test_params(MyStruct { x: 1 })]
   |               ^^^^^^^^
